# shadow-agentic

./: .env.example  README.md  main.py  pyproject.toml  terminal.py  test_basescan.py  test_pipeline.py  test_retrieval.py
agents/: dexscreener_agent.py  insights_agent.py  wallet_agent.py  x_agent.py
chains/: rag_recommendation_chain.py  recommendation_chain.py
configs/: config.py
mq/: mq_consumer.py
rabbit-trade-ui/: package-lock.json  package.json
rabbit-trade-ui/src/app/: page.tsx
rabbit-trade-ui/src/app/api/send-message/: route.ts
rabbit-trade-ui/src/app/api/status/: route.ts
rabbit-trade-ui/src/components/: interface.tsx
rabbit-trade-ui/src/lib/: rabbitmq.ts
tools/: dexscreener_tool.py  insights_tool.py  wallet_tool.py  x_tool.py
utils/: retriever.py
